--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,7 +1,7 @@
 .cabecalho{
    display: flex;
    justify-content: space-between;
-   justify-items: center;
+   align-items: center;
    padding: 2rem;
 }
 
@@ -19,11 +19,37 @@
    width: 752px;
 }
 
-.cabecalho__perfil{
+.cabecalho__perfil--espacamento{
    width: 272px;
-   align-items: center; 
    display: flex;
    justify-content: flex-end;
+}
+
+.cabecalho__mobile{
+   display: none;
+}
+
+.mobile__menu{
+   margin-left: 2.25rem;
+}
+
+.mobile__pesquisa{
+   display: none;
+}
+
+.cabecalho__perfil{
+   align-items: center; 
+   border-radius: 8px;
+   box-sizing: border-box;
+   display: flex;
+   justify-content: center;
+   padding: 12px;
+   transition: .3s;
+}
+
+.cabecalho__perfil:hover{
+   background-color: rgba(255, 255, 255, 0.08);
+   cursor: pointer;
 }
 
 .perfil__img{
@@ -36,4 +62,40 @@
 
 .perfil__nome{
    font-weight: 300;
+}
+
+@media screen and (max-width: 1300px) {
+   
+   .cabecalho__perfil--espacamento{
+      display: none;
+   }
+
+   .cabecalho__mobile{
+      display: flex;
+      align-items: center;
+      margin-left: 3rem;
+   }
+
+   .cabecalho__pesquisa{
+      width: 70%;
+   }
+
+   .cabecalho__container{
+      margin-right: 2.5rem;
+   }
+}
+
+@media screen and (max-width: 768px) {
+
+   .cabecalho{
+      padding: 1.5rem 1rem 1rem 1rem;
+   }
+
+   .cabecalho__pesquisa{
+      display: none;
+   }
+
+   .mobile__pesquisa{
+      display: initial;
+   }
 }
